--- a/index.HTML
+++ b/index.HTML
@@ -5,7 +5,7 @@
 </head>
 <body background="ResponsePC壁紙.png" style = "text-align:center">
 <h1>ResponsePCのWebサイト</h1>
-<img src="ResponsePCアイコン02.jpg" width="200" height="200">
+<img src="ResponsePCアイコン.jpg" width="200" height="200">
 <br>
 ★YouTubeにて動画投稿をして活動しています★
 <br>
