--- a/index.HTML
+++ b/index.HTML
@@ -1,10 +1,9 @@
 <html>
 <head>
-<title><h1>ResponsePCのホームページ</h1>
-</title>
+<title>ResponsePC</title>
 </head>
 <body background="ResponsePC壁紙.png" style = "text-align:center">
-<h1>ResponsePCのWebサイト</h1>
+<h1>ResponsePCのホームページ</h1>
 <img src="ResponsePCアイコン.jpg" width="200" height="200">
 <br>
 ★YouTubeにて動画投稿をして活動しています★
