--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
 		<link rel="icon" href="ResposnePC.ico">
 		<title>ResponsePC</title>
 	</head>
-	<body background="ResponsePC壁紙.png" style = "text-align:center">
+	<body background="ResponsePC_Wallpaper.png" style="text-align: center">
 		<h1>ResponsePCのホームページ</h1>
-		<img src="ResponsePCアイコン.jpg" width="200" height="200">
+		<img src="ResponsePC_Icon.jpg" width="200" height="200">
 		<br>
 		★YouTubeにて動画投稿をして活動しています★
 		<br>
 		☆リンク集☆
 		<br>
-		<a href="https://www.youtube.com/ResponsePC"><font color = "red">Youtubeチャンネル</font></a>
+		<a href="https://www.youtube.com/ResponsePC"><font color="red">Youtubeチャンネル</font></a>
 		<br>
-		<a href="https://twitter.com/ResponsePC_Junk"><font color = "blue">Twitterアカウント</font></a><br>
+		<a href="https://twitter.com/ResponsePC_Junk"><font color="blue">Twitterアカウント</font></a><br>
 	</body>
 </html>
